--- a/croak_01.html
+++ b/croak_01.html
@@ -56,8 +56,6 @@
  To the extent possible under law, the persons who associated CC0 with this work have waived all copyright and related or neighboring rights to this work.</p>
 </section>
 <section class="">
-<!-- ![](images/coversuper.svg) -->
-<!-- {: .background} -->
 <h2 id="autozinefier">AutoZinefier</h2>
 <p>This zine was typed in a <em>plain text editor</em> using <a href="https://daringfireball.net/projects/markdown/basics">markdown</a> and html. 
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
@@ -214,8 +212,7 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </tbody>
 </table>
 <p>*Ranged attacks only.</p>
-<!-- ![](images/coversuper.svg) -->
-<!-- {: .background} -->
+<p :=":"><img alt="image" src="images/ranger_portrait.svg" /></p>
 <h3 class="breakbefore breakafter hidden" id="ranger-character-sheet">Ranger character sheet</h3>
 <p class="fullpage breakbefore"><a href="charactersheets/RangerSheet.pdf"><img alt="" src="charactersheets/RangerSheet.svg" /></a></p>
 <p class="breakbefore breakafter hidden">Ranger character sheet 2</p>
@@ -448,7 +445,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <p>The anointed warrior. Anti-paladins may use all of the powers of the cleric and <em>Mighty Deeds</em> upon reaching level 2. God&rsquo;s warrior is subject to harsher punishment then most.</p>
 <p><strong>Hit points, Lucky weapon, Mighty Deeds, Crit range:</strong> As Paladin.</p>
 <p><strong>Fickle Master</strong>: Anti-Paladin&rsquo;s use d5s when rolling on the disapproval table.</p>
-<p><strong>Lay On Hands:</strong>: Replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18) or, as an action, the Anti-paladin may cause 1 die of damage to any <em>living being</em> touched. The die used is on the dice chain at the Anti-paladin&rsquo;s level. Undead are healed as normal <em>lay on hands</em>. Turned undead are healed and do your bidding for the day.</p>
+<p><strong>Lay On Hands:</strong>: Replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18) or, as an action, the Anti-paladin may cause 1 die of damage to any <em>living being</em> touched. The die is the lowest on the dice chain at the Anti-paladin&rsquo;s level. Undead are healed as normal <em>lay on hands</em>. </p>
 <p><strong>Turn Unholy:</strong> effects the same creatures as a lawful Cleric, but makes them your slaves. Use the <em>Turn Unholy</em> table but, the turned fight for you for the amount of time listed and half the hit points. </p>
 <h3 id="paladin-anti-paladin-table">Paladin /Anti- Paladin Table</h3>
 <table>
@@ -485,7 +482,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 <tr>
 <td>1</td>
-<td>+1</td>
+<td>+2</td>
 <td>1d10/III</td>
 <td>1d20</td>
 <td>+0</td>
@@ -900,7 +897,7 @@ point of damage.</p>
 </section>
 <section class="">
 <h2 id="bards-bane">Bard&rsquo;s Bane</h2>
-<p>This enchanted sword passes exists in a dimension of infinate personalities. Roll on the following table at the beginning of each session.</p>
+<p>This intelligent sword passes exists in a dimension of infinate personalities. Roll on the following table at the beginning of each session.</p>
 <table>
 <thead>
 <tr>
@@ -1062,8 +1059,8 @@ point of damage.</p>
 </tr>
 </tbody>
 </table>
-<p>If the sword is ignored, unused for a long time, or unused because of a die roll, it becomes Petulant at the next personality change. 
-Petulant: whines about everything. No bonuses.</p>
+<p>If the sword is ignored, unused for a long time, or unused because of a die roll, it becomes Petulant and sarcastic at the next personality change. 
+No bonuses.</p>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
