--- a/croak_01.html
+++ b/croak_01.html
@@ -384,6 +384,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 </tbody>
 </table>
+<p :=":"><img alt="image" src="images/barbarian_portrait.svg" /></p>
 <h3 class="breakbefore breakafter hidden" id="barbarian-character-sheet">Barbarian character sheet</h3>
 <p class="fullpage breakbefore"><a href="charactersheets/BarbarianSheet.pdf"><img alt="" src="charactersheets/BarbarianSheet.svg" /></a></p>
 <p class="breakbefore breakafter hidden">Barbarian character sheet 2</p>
